table: fix column alignment issues in Firefox
Firefox needs extra time after TableHeader mounts to get the correct
column widths from the opacified original, that are then propagated to
the fixed clone via `columnWidths`. Temporary workaround until table
components are refactored with flexbox.

--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -4318,11 +4318,6 @@ thead .htCollapseButton:after {
 .fixedHeader-locked + .fixedHeader-floating {
   border-top: 0!important;
 }
-@media (max-width: 768px) {
-  .fixedHeader-floating {
-    display: none;
-  }
-}
 .fixedHeader-locked {
   position: absolute;
 }
