--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -48,6 +48,7 @@ body {
   padding-left: 0px;
   padding-right: 0px;
   margin-top: 1px;
+  margin-left: 0px !important;
 }
 
 .sort-bar {
